crates/carta/tests/snapshots/golden_writer__commonmark__table__table-caption-div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<table>
<caption><div>
<p>Table caption</p>
</div></caption>
<tbody>
<tr>
<td>a</td>
<td>b</td>
</tr>
</tbody>
</table>
